--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,110 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,300;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,700;0,900;1,200;1,300;1,400;1,600;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Koulen&display=swap');
+*{
+    margin: 0%;
+    padding: 0%;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body{
+    /* font-family: 'Roboto', sans-serif; */
+    font-family: 'Titillium Web', sans-serif;
+    /* font-family: 'Koulen', cursive; */
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.navigation{
+    display: flex;
+    margin-top: 10px;
+    margin-left: 10px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.navigation div{
+    display: flex;
+    justify-content: end;
+    flex-grow: 1;
+}
+.navigation h2{
+    letter-spacing: 1px;
 }
 
-.App-link {
-  color: #61dafb;
+.navigation div a{
+    padding: 10px;
+    margin-right: 15px;
+    text-decoration: none;
+    font-weight: 600;
+    color: #000;
+    font-size: 16px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.home{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 70vh;
+    justify-content: center;
+    align-items: center;
+}
+.my-image img{
+    display: relative;
+    top: -100px;
+    width: 200px;
+    height: 200px;
+    border-radius: 66% 34% 39% 61% / 44% 46% 54% 56% ;
+    border:3px solid #93E5AB;
+    box-shadow: 4px 4px 8px 0 #93E5AB;
+   transition: border-radius 1000ms ease-out;
+}
+.my-image img:hover{
+    border-radius: 58% 42% 23% 77% / 51% 30% 70% 49% ;
+}
+
+.detail{
+    display: flex;
+    width: 550px;
+    margin-right: 20px;
+    letter-spacing: 1px;
+    padding: 10px;
+}
+.detail p{
+    margin-top: 10px;
+    color: #333;
+    line-height: 30px;
+}
+.socials{
+    font-size: 25px;
+    margin-top: 10px;
+    
+}
+.socials a{
+    margin-right: 20px;
+    color: #000;
+}
+.description{
+    display: flex;
+    flex-direction: column;
+    width: 350px;
+}
+.description h1{
+    font-weight: 900;
+    letter-spacing: 3px;
+}
+.tech{
+    width: 500px;
+}
+.tech-stack{
+    display: flex;
+    justify-content: space-around;
+    margin-top: 40px;
+    width: 100%;
+    padding: 5px;
+}
+.tech-stack span img{
+    width: 35px;
+    aspect-ratio: 1/1;
+}
+.tech-stack .header{
+    border-right: 2px solid #666;
+    padding-right: 10px;
+    padding-top: 5px;
+    font-size: 18px;
 }
