--- a/src/App.css
+++ b/src/App.css
@@ -7,8 +7,8 @@
 }
 
 body{
-    /* font-family: 'Roboto', sans-serif; */
-    font-family: 'Titillium Web', sans-serif;
+    font-family: 'Roboto', sans-serif;
+    /* font-family: 'Titillium Web', sans-serif; */
     /* font-family: 'Koulen', cursive; */
 }
 
