--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,10 @@
 html{
     scroll-behavior: smooth;
 }
-
+.dark-theme{
+    background-color: #000;
+    color: #fff
+}
 body{
     font-family: 'Roboto', sans-serif;
     margin-top: 50px;
@@ -20,6 +23,7 @@ body{
     position: fixed;
     top: 0px;
     width: 100%;
+    height: 2.5rem;
     z-index: 100;
     background-color: #fff;
 }
@@ -27,7 +31,10 @@ body{
 .navigation div{
     display: flex;
     justify-content: end;
-    flex-grow: 1;
+   position: fixed;
+   right: 0;
+   outline: none;
+   
 }
 .navigation h2{
     letter-spacing: 1px;
@@ -35,7 +42,15 @@ body{
 .navigation a:hover{
     color: #93E5AB;
 }
-
+#toggle-theme{
+    display: inline-block;
+    position: fixed;
+    top: 0px;
+    right: 25rem;
+    font-size: 20px;
+    padding-top: 15px;
+    cursor: pointer;
+}
 .navigation div a{
     padding: 10px;
     margin-right: 15px;
@@ -151,6 +166,9 @@ body{
     .description{
         width: 200px;
     }
+    .nav-links{
+        width: 100%;
+    }
     .home h1{
         font-size: larger;
         width: 200px;
@@ -177,6 +195,10 @@ body{
     .home{
         width: 100%
     }
+    #toggle-theme{
+        right: 6rem;
+        padding-top: 10px;
+        }
     .detail{
         flex-direction: column;
         margin-top: 10rem;
@@ -211,6 +233,7 @@ body{
         position: fixed;
         flex-direction: column;
         width: 100%;
+        left: 0px;
         align-items: center;
         padding: 10px;
         top: 30px;
