--- a/src/App.css
+++ b/src/App.css
@@ -1,249 +1,301 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,300;1,700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,700;0,900;1,200;1,300;1,400;1,600;1,700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Koulen&display=swap');
-*{
-    margin: 0%;
-    padding: 0%;
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,300;1,700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,700;0,900;1,200;1,300;1,400;1,600;1,700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Koulen&display=swap");
+* {
+  margin: 0%;
+  padding: 0%;
 }
-html{
-    scroll-behavior: smooth;
+html {
+  scroll-behavior: smooth;
 }
-.dark-theme{
-    background-color: #000;
-    color: #fff
+.dark-theme {
+  background-color: #000;
+  color: #fff;
 }
-body{
-    font-family: 'Roboto', sans-serif;
-    margin-top: 50px;
-}
-
-.navigation{
-    display: flex;
-    padding: 5px;
-    position: fixed;
-    top: 0px;
-    width: 95%;
-    height: 2.5rem;
-    z-index: 100;
-    background-color: #fff;
+body {
+  font-family: "Roboto", sans-serif;
+  margin-top: 50px;
 }
 
-.navigation div{
-    display: flex;
-    justify-content: end;
-   position: fixed;
-   right: 0;
-   outline: none;
-   
-}
-.navigation h2{
-    letter-spacing: 1px;
-}
-.navigation a:hover{
-    color: #93E5AB;
-}
-#toggle-theme{
-    display: inline-block;
-    position: fixed;
-    top: 0px;
-    right: 25rem;
-    font-size: 20px;
-    padding-top: 15px;
-    cursor: pointer;
-}
-.navigation div a{
-    padding: 10px;
-    margin-right: 15px;
-    text-decoration: none;
-    font-weight: 600;
-    color: #000;
-    font-size: 16px;
-}
-.hamburger{
-    display: none;
-    position: fixed;
+.navigation {
+  display: flex;
+  padding: 5px;
+  position: fixed;
+  top: 0px;
+  width: 100%;
+  height: 2.5rem;
+  z-index: 100;
+  background-color: #fff;
 }
 
-.home{
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    height: 70vh;
-    margin-top: 5rem;
-    justify-content: center;
-    align-items: center;
+.navigation div {
+  display: flex;
+  justify-content: end;
+  position: fixed;
+  right: 0;
+  outline: none;
 }
-.my-image img{
-    display: relative;
-    top: -100px;
+.navigation h2 {
+  letter-spacing: 1px;
+}
+.navigation a:hover {
+  color: #93e5ab;
+}
+#toggle-theme {
+  display: inline-block;
+  position: fixed;
+  top: 0px;
+  right: 25rem;
+  font-size: 20px;
+  padding-top: 15px;
+  cursor: pointer;
+}
+.navigation div a {
+  padding: 10px;
+  margin-right: 15px;
+  text-decoration: none;
+  font-weight: 600;
+  color: #000;
+  font-size: 16px;
+}
+.hamburger {
+  display: none;
+  position: fixed;
+}
+
+.home {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 70vh;
+  margin-top: 5rem;
+  justify-content: center;
+  align-items: center;
+}
+.my-image img {
+  display: relative;
+  top: -100px;
+  width: 200px;
+  height: 200px;
+  border-radius: 66% 34% 39% 61% / 44% 46% 54% 56%;
+  border: 3px solid #93e5ab;
+  box-shadow: 4px 4px 8px 0 #93e5ab;
+  animation-name: wobble;
+  animation-duration: 6000ms;
+  animation-iteration-count: infinite;
+}
+
+/* Blog page css */
+
+.blog-list {
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 5rem;
+}
+
+.blog-post {
+  width: 60%;
+  text-align: center;
+  padding: 10px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  border-radius: 10px;
+  margin-bottom: 1.8rem;
+}
+.blog-content {
+  display: flex;
+  padding: 10px;
+}
+.blog-post img {
+  width: 40%;
+  border-radius: 10px;
+}
+.blog-post p {
+  padding: 10px;
+  text-align: start;
+  font-size: 1.2rem;
+  letter-spacing: 1px;
+  line-height: 25px;
+}
+.blog-link {
+  display: inline-block;
+  border: none;
+  border-radius: 5px;
+  padding: 10px;
+  background-color: #93e5ab;
+  text-decoration: none;
+  font-size: 16px;
+  font-weight: 600;
+  margin-bottom: 10px;
+  color: inherit;
+}
+
+/* Home page Animation */
+
+@keyframes wobble {
+  0% {
+    border-radius: 66% 34% 39% 61% / 44% 46% 54% 56%;
+  }
+  30% {
+    border-radius: 58% 42% 23% 77% / 51% 30% 70% 49%;
+  }
+  50% {
+    border-radius: 56% 44% 40% 60% / 54% 63% 37% 46%;
+  }
+  70% {
+    border-radius: 58% 42% 23% 77% / 51% 30% 70% 49%;
+  }
+  100% {
+    border-radius: 66% 34% 39% 61% / 44% 46% 54% 56%;
+  }
+}
+.detail {
+  display: flex;
+  width: 550px;
+  letter-spacing: 1px;
+  padding: 10px;
+}
+.detail p {
+  margin-top: 10px;
+  color: inherit;
+  line-height: 30px;
+}
+.socials {
+  font-size: 25px;
+  margin-top: 10px;
+}
+.socials a {
+  margin-right: 20px;
+  color: inherit;
+}
+.description {
+  display: flex;
+  flex-direction: column;
+  width: 350px;
+}
+.description h1 {
+  font-weight: 900;
+  letter-spacing: 3px;
+}
+.tech {
+  width: 500px;
+}
+.tech-stack {
+  display: flex;
+  justify-content: space-around;
+  margin-top: 40px;
+  width: 100%;
+  padding: 5px;
+}
+.tech-stack span img {
+  width: 35px;
+  aspect-ratio: 1/1;
+}
+.tech-stack .header {
+  border-right: 2px solid #666;
+  padding-right: 10px;
+  padding-top: 5px;
+  font-size: 18px;
+}
+.nav-toggle {
+  display: none;
+}
+
+@media screen and (max-width: 450px) {
+  body {
+    margin-top: 200px;
+  }
+  .home {
+    width: 300px;
+    font-size: medium;
+  }
+  .description {
     width: 200px;
-    height: 200px;
-    border-radius: 66% 34% 39% 61% / 44% 46% 54% 56% ;
-    border:3px solid #93E5AB;
-    box-shadow: 4px 4px 8px 0 #93E5AB;
-   animation-name: wobble;
-   animation-duration: 6000ms;
-   animation-iteration-count: infinite;
-}
-@keyframes wobble{
-    0%{
-        border-radius: 66% 34% 39% 61% / 44% 46% 54% 56% ;
-    }
-    30%{
-        border-radius: 58% 42% 23% 77% / 51% 30% 70% 49% ;
-    }
-    50%{
-        border-radius: 56% 44% 40% 60% / 54% 63% 37% 46%  ;
-    }
-    70%{
-        border-radius: 58% 42% 23% 77% / 51% 30% 70% 49% ;
-    }
-    100%{
-        border-radius: 66% 34% 39% 61% / 44% 46% 54% 56% ;
-    }
-}
-.detail{
-    display: flex;
-    width: 550px;
-    letter-spacing: 1px;
-    padding: 10px;
-}
-.detail p{
-    margin-top: 10px;
-    color: inherit;
-    line-height: 30px;
-}
-.socials{
-    font-size: 25px;
-    margin-top: 10px;
-    
-}
-.socials a{
-    margin-right: 20px;
-    color: inherit;
-}
-.description{
-    display: flex;
-    flex-direction: column;
-    width: 350px;
-}
-.description h1{
-    font-weight: 900;
-    letter-spacing: 3px;
-}
-.tech{
-    width: 500px;
-}
-.tech-stack{
-    display: flex;
-    justify-content: space-around;
-    margin-top: 40px;
+  }
+  .nav-links {
     width: 100%;
-    padding: 5px;
+  }
+  .home h1 {
+    font-size: xx-large;
+    width: 200px;
+  }
+  .home p {
+    width: 200px;
+  }
+  .tech {
+    width: 200px;
+  }
+  .nav-links {
+    width: 200px;
+  }
+  .detail {
+    width: 100px;
+  }
 }
-.tech-stack span img{
-    width: 35px;
-    aspect-ratio: 1/1;
-}
-.tech-stack .header{
-    border-right: 2px solid #666;
-    padding-right: 10px;
-    padding-top: 5px;
-    font-size: 18px;
-}
-.nav-toggle{
+
+@media screen and (max-width: 600px) {
+  #nav-toggle:not(:checked) ~ .nav-links {
     display: none;
+  }
+  .home {
+    width: 100%;
+    margin-top: 18rem;
+  }
+  #toggle-theme {
+    right: 6rem;
+    padding-top: 10px;
+  }
+  .blog-link {
+    width: 80%;
+  }
+  .detail {
+    flex-direction: column;
+    margin-top: 10rem;
+    align-items: center;
+    text-align: center;
+    padding: 0;
+  }
+  .blog-content {
+    flex-direction: column;
+    align-items: center;
+  }
+  .blog-content img {
+    width: 100%;
+  }
+  .description {
+    align-items: center;
+  }
+  .my-image {
+    align-self: center;
+  }
+  .navigation {
+    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.05);
+  }
+  .tech-stack {
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+  }
+  .hamburger {
+    position: fixed;
+    right: 5px;
+    display: inline-block;
+    font-size: 2rem;
+    cursor: pointer;
+  }
+  .navigation .nav-links {
+    position: fixed;
+    flex-direction: column;
+    width: 100%;
+    left: 0px;
+    align-items: center;
+    padding: 10px;
+    top: 30px;
+    background-color: #fff;
+    z-index: 110;
+  }
+  .nav-links a {
+    display: block;
+  }
 }
-
-@media screen and (max-width:450px){
-    body{
-        margin-top: 200px;
-    }
-    .home{
-        width: 300px;
-        font-size: medium;
-    }
-    .description{
-        width: 200px;
-    }
-    .nav-links{
-        width: 100%;
-    }
-    .home h1{
-        font-size: xx-large;
-        width: 200px;
-    }
-    .home p{
-        width: 200px;
-    }
-    .tech{
-        width: 200px;
-    }
-    .nav-links{
-        width: 200px;
-    }
-    .detail{
-        width: 100px;
-    }
-}
-
-@media screen and (max-width:600px){
-
-    #nav-toggle:not(:checked) ~ .nav-links{
-        display: none;
-    }
-    .home{
-        width: 100%;
-        margin-top:18rem;
-    }
-    #toggle-theme{
-        right: 6rem;
-        padding-top: 10px;
-        }
-    .detail{
-        flex-direction: column;
-        margin-top: 10rem;
-        align-items: center;
-        text-align: center;
-        padding: 0;
-    }
-    .description{
-        align-items: center;
-    }
-    .my-image{
-        align-self: center;
-    }
-    .navigation{
-        box-shadow: 0 2px 2px 0 rgba(0,0,0,0.05);
-    }
-    .tech-stack{
-        flex-direction: column;
-        align-items: center;
-        gap: 20px;
-        
-    }
-    .hamburger{
-        position: fixed;
-        right: 5px;
-        display: inline-block;
-        font-size: 2rem;
-        /* padding-right:0.5rem ; */
-        cursor: pointer;
-    }
-    .navigation .nav-links{
-        position: fixed;
-        flex-direction: column;
-        width: 100%;
-        left: 0px;
-        align-items: center;
-        padding: 10px;
-        top: 30px;
-        background-color: #fff;
-        z-index: 110;
-    }
-    .nav-links a{
-        display: block;
-    }
-    
-}
-
